# jldev_uv

./: Manifest.toml  Project.toml  README.md  juliapkg.json  main.py  pyproject.toml
src/: JlDevUV.jl
src/python/jluv/: __init__.py  computation.py
test/: runtests.jl
test/julia/: arithmetic_tests.jl
test/python/: test_jluv.py
