[project]
name = "jldev-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "juliacall>=0.9.24",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "juliapkg>=0.1.16",
    "jupyterlab>=4.4.0",
    "jupytext>=1.17.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/jluv"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
]
